--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=prod
+spring.profiles.active=dev
 #spring.jpa.hibernate.ddl-auto=create-drop
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/webshop
 #spring.datasource.username=root
