--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,23 @@
-spring.profiles.active=dev
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/webshop
-#spring.datasource.username=root
-#spring.datasource.password=bancpost
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-#
+#spring.profiles.active=prod
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/webshop
+spring.datasource.username=root
+spring.datasource.password=bancpost
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
 ## Enable spring data repos
-#spring.data.jpa.repositories.enabled=true
-#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-##server.ssl.enabled=false
-##server.ssl.key-store: src/main/resources/bootsecurity.p12
-##server.ssl.key-store-password:bancpost
-##server.ssl.key-store-type: PKCS12
-##server.ssl.key-alias: bootsecurity
+spring.data.jpa.repositories.enabled=true
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+server.ssl.enabled=false
+server.ssl.key-store: src/main/resources/bootsecurity.p12
+server.ssl.key-store-password:bancpost
+server.ssl.key-store-type: PKCS12
+server.ssl.key-alias: bootsecurity
 #
 #
-##spring.datasource.driverClassName=org.h2.Driver
-##spring.h2.console.enabled=true
-##spring.h2.console.path=/db
+spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.enabled=true
+spring.h2.console.path=/db
 #
 #spring.mail.host=smtp.mailtrap.io
 #spring.mail.port=587
