--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,9 +15,9 @@ server.ssl.key-store-type: PKCS12
 server.ssl.key-alias: bootsecurity
 #
 #
-spring.datasource.driverClassName=org.h2.Driver
-spring.h2.console.enabled=true
-spring.h2.console.path=/db
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/db
 #
 #spring.mail.host=smtp.mailtrap.io
 #spring.mail.port=587
